--- a/Apps.Magento/Apps.Magento.csproj
+++ b/Apps.Magento/Apps.Magento.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Blackbird.Applications.Sdk.Common" Version="2.9.0-alpha1" />
         <PackageReference Include="Blackbird.Applications.SDK.Extensions.FileManagement" Version="1.0.2-alpha2" />
         <PackageReference Include="Blackbird.Applications.Sdk.Utils" Version="1.0.25" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.64" />
     </ItemGroup>
 
     <ItemGroup>
