--- a/Apps.Magento/Apps.Magento.csproj
+++ b/Apps.Magento/Apps.Magento.csproj
@@ -5,7 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <Product>Magento</Product>
-        <Description>Magento is an open-source e-commerce platform written in PHP, offering an extensive suite of tools and features for building and managing online stores. It’s designed to be flexible and scalable, able to support businesses of all sizes – from small startups to large enterprises.</Description>
+        <Description>Magento is the leading platform for open commerce innovation. It’s designed to be flexible and scalable, able to support businesses of all sizes – from small startups to large enterprises.</Description>
         <Version>1.0.0</Version>
         <AssemblyName>Apps.Magento</AssemblyName>
         <RootNamespace>Apps.Magento</RootNamespace>
