--- a/Apps.Magento/Apps.Magento.csproj
+++ b/Apps.Magento/Apps.Magento.csproj
@@ -4,9 +4,9 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Product>Magento [Beta]</Product>
+        <Product>Adobe Commerce - Magento [Beta]</Product>
         <Description>Magento is the leading platform for open commerce innovation. It’s designed to be flexible and scalable, able to support businesses of all sizes – from small startups to large enterprises.</Description>
-        <Version>1.0.1</Version>
+        <Version>1.0.2</Version>
         <AssemblyName>Apps.Magento</AssemblyName>
         <RootNamespace>Apps.Magento</RootNamespace>
         <PackageId>Apps.Magento</PackageId>
